complete auth with clerk & refactor folder structure

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,10 @@ body {
 	height: 100%;
 }
 
+.cl-socialButtons {
+	border: 1px solid #101010;
+}
+
 @theme inline {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
@@ -119,10 +123,10 @@ body {
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+	* {
+		@apply border-border outline-ring/50;
 	}
-  body {
-    @apply bg-background text-foreground;
+	body {
+		@apply bg-background text-foreground;
 	}
 }
